--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,6 +25,7 @@ body {font-size:16px; text-align: justify;}
   <div class="w3-bar-block">
     <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
     <a href="#introduction" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Introduction</a>
+    <a href="#creation" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Creation of VPC</a>
     <a href="#categories" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Categories</a>
     <div class="w3-dropdown-hover">
       <button onclick="window.location.href='#features'" class="w3-button">Features</button>
@@ -85,6 +86,28 @@ body {font-size:16px; text-align: justify;}
       <p>&rarr; When you connect your on-premises or remote resources to Google Cloud, you’ll have global access to your VPCs without needing to replicate connectivity or administrative policies in each region.</p>
       <p>&rarr; <a href="https://www.youtube.com/watch?v=cNb7xKyya5c" target="_blank" class="linkcolor">Get started with Virtual Private Cloud</a> on Google cloud platform</p>
       <p>&rarr; <a href=" https://www.youtube.com/watch?v=NPs_-Y5nFgE" target="_blank" class="linkcolor">Create a Virtual Private Cloud</a>  on Google cloud platform</p>
+  </div>
+
+  <!-- Creation of VPC -->
+  <div class="w3-container" id="creation" style="margin-top:75px">
+    <h1 class="w3-xxxlarge"><b>Create your own VPC</b></h1>
+    <hr style="width:50px;border:5px solid #3f51b5" class="w3-round">
+    <h3>Steps to create your own Google Virtual Private Network</h3>
+    <h5><b>Step 1:</b></h5>
+      <p>Go to <a href="https://console.cloud.google.com" target="_blank" class="linkcolor">Google Cloud Console</a> and Sign up/login with your Google account. 30 days free trial is available. After then that it will ask you if you want to continue or not.</p>
+      <img src="Images/demo1.png" alt="Demo" style="display: block; width:100%;"><br><br>
+    <h5><b>Step 2:</b></h5>
+      <p>Click on Google Cloud Platform --> VPC network --> VPC networks</p>
+      <img src="Images/demo2.png" alt="Demo" style="display: block; width:100%;"><br><br>
+    <h5><b>Step 3:</b></h5>
+      <p>Click on CREATE VPC NETWORK</p>
+      <img src="Images/demo3.png" alt="Demo" style="display: block; width:100%;"><br><br>
+    <h5><b>Step 4:</b></h5>
+      <P>This is the screen where you are going to create your own VPC Network. Fill all the details according to your requirements and click on the Create button.</P>
+      <img src="Images/demo4.png" alt="Demo" style="display: block; width:100%;"><br><br>
+    <h5><b>Step 5:</b></h5>
+      <p>So this is the final screen how it looks like after creating your own Google VPC.</p>
+      <img src="Images/demo5.png" alt="Demo" style="display: block; width:100%;">
   </div>
 
   <!-- Categories -->
